# Lab4OS-Syncronization

./: CMakeLists.txt  README.md  manager.cpp  manager.h  receiver.cpp
Receiver/: Receiver.cpp
Sender/: Sender.cpp  Sender.h
manager/: manager.cpp  manager.h
